--- a/arrangementer.html
+++ b/arrangementer.html
@@ -46,58 +46,54 @@
         </div>
     </header>
 
-<!--ChatGPT: "Kan jeg opdele min side i billeder ved brug af html og css?" https://chatgpt.com/share/67580d23-3af4-8009-bc27-cd1e41a37cb8-->
+
     <main>
     <div class="koncert1">
-        <img src="images/fakenameband.png" alt="fakenameband" class="fakenameband_billede">
+        <img src="images/allen.png" alt="allen" class="allen">
+
        <div class="tekst1">
-        <!--ChatGPT: "opdigt er fake band, og giv bandet et godt navn. skriv en kort beskrivende tekst om bandet og deres oprindelse" https://chatgpt.com/share/67581da0-bcac-8009-9f3c-f43610a9b4d9-->
         <h1>
-            Velvet Voltage
+            Allen Anjeh
         </h1>
-        <p>Velvet Voltage er et dansk synth-rock band, der blander mørke, hypnotiske beats med en elektrisk energi,
-            der trækker tråde fra både 80’ernes new wave og nutidens elektroniske eksperimenter.
-            Bandet blev dannet i Aarhus i 2021, da forsanger og keyboardspiller Freja Storm mødte guitarist Magnus Lind på en
-            lokal jam-session. Med en fælles kærlighed til vintage synthesizere og dybtfølte tekster begyndte de at
-            skabe musik, der balancerer mellem det intime og det eksplosive.
-            Gruppens debut-EP Neon Dreams blev hurtigt en darling blandt undergrundsscenen og gav dem en voksende fanskare.
-            Velvet Voltage er kendt for deres intense liveshows, hvor de kombinerer musik og visuelle effekter for at skabe
-            en helhedsoplevelse, der fanger publikum fra første tone.
+        <p>Med sit take på r&b og neo-soul bringer Allen Anjeh en kærkommen originalitet ind på den danske musikscene.
+            Hendes debut-ep Ó mmɛ ne, der udkom i september 2023, har været mange år undervejs, og består af en håndfuld sange, der musikalsk formidler indflydelsen fra hendes afrikanske rødder til fulde.
+            Med en barndom i Cameroun og teenageår tilbragt i Danmark er Allen Anjeh rundet af både sin bedstemors samling af plader med afrikanske ikoner som Fela Kuti og Manu Di Bango og hendes storebrors samling af 90’er-hiphop.
+            Selv dyrkede hun i sin barndom forbilleder som Destiny’s Child, Michael Jackson og Missy Elliott, og ud af de mange inspirationer samt det afgørende kulturchok, det var at flytte fra Cameroun til Danmark som 12-årig, har hun fundet sit eget kunstneriske ståsted og en stemme, man ikke kan lade være med at lytte til. 
+            ”Ep'en er dedikeret til min kærlighed til mit folk og min kultur."
+            Allen Anjeh skal optræde på årets Roskilde Festival, som skriver følgende om den lysende stjerne: ”Med glødende soulvokal formidler hun både personlige erfaringer fra en turbulent ungdom, men også en dyb kærlighed til den afrikanske kultur, hun har med i bagagen. Det skinner igennem på hendes fremragende debut-ep, Ó mmɛ ne, som endelig udkom i 2023 efter flere års arbejde.
+            Ep’en viser en ung kunstner, der ikke blot synger besidder en fantastisk sjælfuld vokal, men som også skaber sange med dybde og nuancerigdom i favntag med både pop, soul, afrikanske rødder og jazzede indslag. Det er et varmt og organisk bud på moderne soul, som også allerede har vakt opsigt internationalt, og der er god grund til at sætte forventningerne højt, når hun indtager Roskilde med sin store stemme og personlige sange.”
+            Vi stemmer i og glæder os helt vildt til at præsentere Allen Anjeh på Radar!
         </div>
     </div>
 
     <div class="koncert2">
-        <img src="images/sceneband.png" alt="sceneband" class="sceneband">
+        <img src="images/gorgeous.png" alt="gorgeous" class="gorgeous">
         <div class="tekst2">
-        <!--ChatGPT: "Opdigt er fake band, og giv bandet et godt navn. Skriv en kort beskrivende tekst om bandet og deres oprindelse. Bandnavnen skal indeholde ordet red" https://chatgpt.com/share/67581f62-de58-8009-b01b-b3c745b55bab-->
+        
             <h1>
-                Red aurora
+                GORGEOUS
             </h1>
-            <p>Red Aurora er en eksplosiv indie-pop-rockgruppe, der kombinerer intense følelser med farverige lydlandskaber. 
-                Bandet blev dannet i 2021 i København og fik hurtigt opmærksomhed for deres dynamiske sceneshows og 
-                fængende melodier. Navnet Red Aurora symboliserer gruppens ønske om at bringe lys og energi 
-                ind i mørket – som en rød morgenhimmel, der varsler en ny begyndelse. 
-                Med tekster, der kredser om kærlighed, håb og indre kampe, har Red Aurora skabt en lyd,
-                der både er rå og sårbar. Bandet har allerede spillet på flere større festivaler og arbejdet på deres debutalbum,
-                som de lover vil være en følelsesmæssig rutsjebanetur.
+            <p>Fantastiske Gorgeous udgiver deres længeventede debut, og giver koncert på Radar i starten af 2025.
+                Med en nærmest country-klingende melodi på et betagende, vuggende pop-beat introducerede Gorgeous sig i foråret 2022 med sangen ’Divine’. ”Vidunderlig. Guddommelig. Og det giver mening,” skrev Politiken, mens Soundvenue fremhævede Gorgeous på deres eftertragtede Breakin’ Sound-liste for 2023. Både P3 og P6 BEAT sendte dem i rotation.
+                Siden debuten fulgte et år med flere udgivelser mens Gorgeous live-debuterede foran et propfyldt Lille VEGA i København, tog på tour med Goss og Phlake og ramte plakaten på Roskilde Festival, hvorefter bandet tog en pause for at fokusere på at lave ny musik og færdiggøre debutalbummet, ’EXP’. 
+                Nu udkommer det længe ventede album fredag d. 27 september og bandet er derfor klar med en række koncerter i foråret, 2025. Experience. Expression. Experiment. Bogstaverne ’EXP’ har fulgt den københavnske gruppe i deres musikalske rejse og koncerterne til foråret bliver ingen undtagelse. For sikkert er det, at koncerterne med det anmelderroste og særegne band bliver en EXPerience. EXPression. EXPeriment og meget mere.
         </div>
     </div>
 
     <div class="koncert3">
-        <img src="images/tremandband.png" alt="tremandband" class="tremandband">
+        <img src="images/anna.png" alt="anna" class="anna">
         <div class="tekst3">
-        <!--ChatGPT: "Opdigt er fake band, og giv bandet et godt navn. Skriv en kort beskrivende tekst om bandet og deres oprindelse. Bandnavnen skal indeholde ordet red" https://chatgpt.com/share/67581f62-de58-8009-b01b-b3c745b55bab-->
+
             <h1>
-                Whispering Tree
+                Anna Roemer
             </h1>
-            <p>Whispering Tree er et indie-rock band, der har været en fast del af musikscenen i Aarhus siden deres dannelse i 2022. 
-                Bandet, der består af fire passionerede musikere, har gennem årene spillet på Radar adskillige gange og opbygget 
-                en loyal fanbase blandt byens musikelskere. Deres unikke blanding af drømmende melodier og følelsesladede 
-                tekster, der ofte trækker på naturens mystik, har gjort dem til et af de mest elskede live-bands i Aarhus. 
-                Med deres karakteristiske lyd og energiske optrædener har Whispering Tree formået at skabe en intim og fængslende 
-                atmosfære hver gang de har optrådt på Radar, hvilket har givet dem en solid plads i hjertet af byens musikalske 
-                fællesskab. Deres debutalbum, Roots of Echoes, har fået stor opmærksomhed, og de ser frem til at fortsætte med 
-                at fortrylle publikum med deres musik, både på Radar og på nye scenarier.
+            <p>Sammen med sin jazzmaster og sit pedalboard, sprænger Anna Roemer rammerne for hvad en sologuitarist kan.
+                Med en unik tilgang til sit instrument, er hun en guitarist, der insisterer på, at guitaren kan meget mere end lytteren tror. Den 22. marts 2024 udgav hun albummet "Blåregn", der formåede at indhente de sjældne og famøse seks stjerner fra GAFFA med ordene:               
+                “Roemers største præstation er i virkeligheden, at hun har formået at holde niveau - teknisk og kunstnerisk - hele vejen igennem albummet; at der ikke på noget tidspunkt er et dyk i kvaliteten af hendes musik; at der ikke - til trods for, at hun er alene om at spille den - er momenter af unødig gentagelse eller tøven; at hun formår at balancere mellem det meget vemodige og kontrasten - det lyse - der giver mig et løft. (...) Et mesterværk” Ivan Rod / GAFFA                
+                Dette mesterværk bliver omdrejningspunktet for koncerten på Radar.                
+                Roemer har arbejdet som professionel musiker i mange år, men det er først inden for de seneste år, at hun har arbejdet målrettet mod en solokarriere ved at forfine og udvikle evnen til at skabe billeder med kun guitaren og hendes pedalboard som hjælpemidler. Det er kernen i hendes unikke tonesprog.                
+                GAFFA kaldte solodebuten "Azure" fra 2022 et virtuost dansk debutalbum og kvitterede dengang med en femstjernet anmeldelse. Albummet blev desuden ugens album på P8Jazz. På "Azure" bliver lytterne vidne til Anna Roemers tålmodighed, styrke og sårbarhed som soloartist. Roemers skaber lydbilleder og soniske universer hvor lytterne bliver vidne til hendes tålmodighed, styrke og sårbarhed.
+                Nu har du chancen for at opleve hende på Radar.
         </div>
     </div>
 
@@ -119,19 +115,16 @@
     </div>
 
     <div class="koncert5">
-        <img src="images/blaamand.png" alt="blaamand" class="blaamand_billede">
+        <img src="images/ungskab.png" alt="ungskab" class="ungskab">
         <div class="tekst5">
-   <!--ChatGPT: "Skriv en kort beskrivende tekst om bandet "blue men"og deres oprindelse." https://chatgpt.com/share/67581b52-bf74-8009-b932-cb7871d05cf2-->
             <h1>
-                Blue men
+                UNG-SKAB
             </h1>
-            <p>Blue Men Group er et eksperimentelt band og performancegruppe, der blev grundlagt i 
-                1987 i New York City af tre kunstnere: Matt Goldman, Phil Stanton og Chris Wink. 
-                Gruppen er kendt for deres unikke blanding af musik, teater, komedie og visuelle 
-                effekter. De optræder ofte med blå malede ansigter og minimalistiske kostumer og bruger 
-                usædvanlige instrumenter og teknologi i deres shows. Blue Man Group begyndte som et 
-                teaterprojekt og har siden udviklet sig til en globalt anerkendt performanceoplevelse, 
-                der kombinerer musik og visuel kunst på en nyskabende måde.
+            <p>UNG-SKAB står som et spejl til en generation af unge, der går med følelserne på ærmet og en ærlig tåre på kinden.
+                Bag UNG-SKAB står Clara Rose Lundberg (vokal) og Eigil Bjørn Meldgaard (vokal og produktion). Duoen mødte hinanden en efterårsdag i 2019 i deres lille hjemby, Snekkersten. Som perifær relation med baggrunde inde for hhv. skuespil og klassisk violin, havde de to aspirerende musikere ikke meget tilfælles, da de første gang stod i Eigils fars kælderstudie og plantede frøene til hvad, der først blev til venskab og senere til UNG-SKAB.                
+                Omkring et år senere, i januar 2021, udgav gruppen deres debut-single, ‘Venter’, og i tiden efter udgav UNG-SKAB en række singler, som kulminerede i en debut-ep i november 2021. Siden udgivelsen af debut-ep’en har UNG-SKAB spillet SPOT-festival flere gange, Tivoli Plænen, åbnet North Side 2024 og udsolgt Store Vega. Clara Rose og Eigil Bjørn er netop vendt tilbage med en EP, der indeholder en nyfortolkning af deres karakteristiske univers og samtidig bevarer duoens legende, genre-nomadiske udtryk                
+                UNG-SKAB står som et spejl til en generation af unge, der går med følelserne på ærmet og en ærlig tåre på kinden. “For os handler den sidste sang på vores nye EP, hjertesangen, om at samles i kærligheden og om at minde alle om, at de fortjener den kærlighed og de ting, de har opnået,” fortæller Clara Rose og Eigil Bjørn. Det er en opfordring til at værdsætte hinanden og de gode ting, selvom verden brænder.
+                Over Eigil Bjørns produktioner, der stædigt afsøger grænselandet mellem r’n’b, pop og trap, svæver Clara Roses svævende arrangementer, der sammen opløser lytteren i UNG-SKABs verden. En verden, hvis vejrtrækning er lyden af hjertevenner og hjertesorg, sommerfester og solopgange. 
         </div>
     </div>
     
