--- a/eksperiment.html
+++ b/eksperiment.html
@@ -17,8 +17,8 @@
     <header>
         <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
 
-    <div class="container" style="float: right;">
-        <div class="dropdown" style="float:right;">
+    <div class="navbar" style="float: right;">
+        <div class="navbar" style="float:right;">
             <button class="dropbtn">Right</button>
             <div class="dropdown-content">
             <a href="#">Link 1</a>
@@ -26,7 +26,7 @@
             <a href="#">Link 3</a>
             </div>
         </div>
-        <div class="dropdown" style="float:right;">
+        <div class="navbar" style="float:right;">
             <button class="dropbtn">Right</button>
             <div class="dropdown-content">
             <a href="#">Link 1</a>
@@ -34,7 +34,7 @@
             <a href="#">Link 3</a>
             </div>
         </div>
-        <div class="dropdown" style="float:right;">
+        <div class="navbar" style="float:right;">
             <button class="dropbtn">Right</button>
             <div class="dropdown-content">
             <a href="#">Link 1</a>
