--- a/test.html
+++ b/test.html
@@ -15,47 +15,43 @@
 </head>
 <body>
     <header>
-    <div class="navcontainer">
+
+    <nav class="navcontainer">
+        <div class="logo">
         <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
+        </div>
 
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
 
         <div class="container" style="float: right;">
             <div class="dropdown" style="float:right;">
-                <button class="dropbtn">Right</button>
+                <button class="dropbtn">Kontaktinformation</button>
+            </div>
+            <div class="dropdown" style="float:right;">
+                <button class="dropbtn">Anmeldelser</button>
                 <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">Historier og oplevelser fra kunstere</a>
                 </div>
             </div>
             <div class="dropdown" style="float:right;">
-                <button class="dropbtn">Right</button>
+                <button class="dropbtn">Om Radar</button>
                 <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">Åbningstider</a>
+                <a href="#">Frivilligt arbejde</a>
+                <a href="#">Radars historie</a>
                 </div>
             </div>
             <div class="dropdown" style="float:right;">
-                <button class="dropbtn">Right</button>
+                <button class="dropbtn">Arrangementer</button>
                 <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-                </div>
-            </div>
-            <div class="dropdown" style="float:right;">
-                <button class="dropbtn">Right</button>
-                <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">Baren</a>
+                <a href="#">Priser</a>
                 </div>
             </div>
         </div>
-    </div>
+    </nav>
+
 
     </header>
 <main>
