--- a/arrangementer.html
+++ b/arrangementer.html
@@ -15,21 +15,19 @@
 <body>
     <header>
         <nav class="navcontainer">
-            <div class="logo">
             <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
-            </div>
     
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
     
             <div class="container" style="float: right;">
                 <div class="dropdown" style="float:right;">
-                    <button class="dropbtn">Kontaktinformation</button>
+                    <a href="kontaktinformation.html"><button class="dropbtn">Kontaktinformation</button></a>
                 </div>
                 <div class="dropdown" style="float:right;">
                     <button class="dropbtn">Anmeldelser</button>
                     <div class="dropdown-content">
-                    <a href="#">Historier og oplevelser fra kunstere</a>
+                    <a href="anmeldelser.html">Historier og oplevelser fra kunstere</a>
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
@@ -37,11 +35,11 @@
                     <div class="dropdown-content">
                     <a href="#">Åbningstider</a>
                     <a href="#">Frivilligt arbejde</a>
-                    <a href="#">Radars historie</a>
+                    <a href="historie.html">Radars historie</a>
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
-                    <button class="dropbtn">Arrangementer</button>
+                    <a href="arrangementer.html"><button class="dropbtn">Arrangementer</button></a>
                     <div class="dropdown-content">
                     <a href="#">Baren</a>
                     <a href="#">Priser</a>
