--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside | Radar</title>
+
+    <!--Logo i fane-->
     <link rel="icon" type="image/x-icon" href="/images/logo_færdig.png">
 
     <!--Stylesheet-->
@@ -19,18 +21,19 @@
             <div class="logo">
             <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
             </div>
-    
+
+ <!--W3Schools: CSS dropdown: https://www.w3schools.com/css/css_dropdowns.asp-->   
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
     
             <div class="container" style="float: right;">
                 <div class="dropdown" style="float:right;">
-                    <button class="dropbtn">Kontaktinformation</button>
+                    <a href="kontaktinformation.html"><button class="dropbtn">Kontaktinformation</button></a>
                 </div>
                 <div class="dropdown" style="float:right;">
                     <button class="dropbtn">Anmeldelser</button>
                     <div class="dropdown-content">
-                    <a href="#">Historier og oplevelser fra kunstere</a>
+                    <a href="anmeldelser.html">Historier og oplevelser fra kunstere</a>
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
@@ -38,11 +41,11 @@
                     <div class="dropdown-content">
                     <a href="#">Åbningstider</a>
                     <a href="#">Frivilligt arbejde</a>
-                    <a href="#">Radars historie</a>
+                    <a href="historie.html">Radars historie</a>
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
-                    <button class="dropbtn">Arrangementer</button>
+                    <a href="arrangementer.html"><button class="dropbtn">Arrangementer</button></a>
                     <div class="dropdown-content">
                     <a href="#">Baren</a>
                     <a href="#">Priser</a>
