--- a/index.html
+++ b/index.html
@@ -58,12 +58,23 @@
 </main>
 
 <footer>
-    <div class="some">
-        <i class="fa-brands fa-spotify"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-youtube"></i>
+<div class="some">
+    <div class="spotify">
+        <a href="https://open.spotify.com/user/radarlive" target="_blank"><img src="images/spotify.png" alt="spotify"></a>
     </div>
+
+    <div class="facebook">
+        <a href="https://www.facebook.com/radarlive" target="_blank"><img src="images/facebook.png" alt="facebook"></a>
+    </div>
+
+    <div class="instagram">
+        <a href="https://www.instagram.com/radarlive/" target="_blank" ><img src="images/instagram.png" alt="instagram"></a>
+    </div>
+
+    <div class="youtube">
+        <a href="https://www.youtube.com/user/radarliverec" target="_blank"><img src="images/youtube.png" alt="youtube"></a>
+    </div>
+</div>
 </footer>
 
 </body>
