--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -32,7 +32,8 @@
             <div class="dropdown" style="float:right;">
                 <button class="dropbtn">Anmeldelser</button>
                 <div class="dropdown-content">
-                <a href="anmeldelser.html">Historier og oplevelser fra kunstere</a>
+                <a href="anmeldelser.html">Hør musikken</a>
+                <a href="#">Historier og oplevelser fra kunstere</a>
                 </div>
             </div>
             <div class="dropdown" style="float:right;">
@@ -59,50 +60,47 @@
         <img src="images/billede1.png" alt="billede" class="billede1">
         <div class="tekst1">
             <h1>ISBJÖRG releasekoncert</h1>
-            <p></p>
-            <div>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1esgylY75bAdWCW8ItVOup?utm_source=generator&theme=0" width="100%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </div>
         </div>
     </section>
 
     <section class="section2">
         <img src="images/billede2.png" alt="billede" class="billede2">
         <div class="tekst2">
-            <h1>Red aurora</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+            <h1>Døtre</h1>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4N2TW7govlzaF1DGmtD34T?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
     <section class="section3">
         <img src="images/billede3.png" alt="billede" class="billede3">
         <div class="tekst3">
-            <h1>velvet voltage</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+            <h1>Resavoir</h1>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6Mmpz9igswKB5ghtJNw0eW?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
     <section class="section4">
         <img src="images/billede4.png" alt="billede" class="billede4">
         <div class="tekst4">
-            <h1>Andreas Odbjerg</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+            <h1>Marie Fjeldsted</h1>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1gQxSHywhHHg6ldxPTrM91?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
     <section class="section5">
         <img src="images/billede5.png" alt="billede" class="billede5">
         <div class="tekst5">
-            <h1>Blæst</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+            <h1>Rin</h1>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2rvHqBh1VdreAE2mxIlv7Z?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
     <section class="section6">
         <img src="images/billede6.png" alt="billede" class="billede6">
         <div class="tekst6">
-            <h1>Blue men</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+            <h1>OTOOTO</h1>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7CjCFlxm6wAY1YaWLHfigE?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 </main>
