--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -31,7 +31,8 @@
             <div class="dropdown" style="float:right;">
                 <button class="dropbtn">Anmeldelser</button>
                 <div class="dropdown-content">
-                <a href="anmeldelser.html">Historier og oplevelser fra kunstere</a>
+                    <a href="anmeldelser.html">Hør musikken</a>
+                    <a href="#">Historier og oplevelser fra kunstere</a>
                 </div>
             </div>
             <div class="dropdown" style="float:right;">
