--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -18,10 +18,11 @@
 <body>
 
 <header>
+<!--Header med menubar og logo-->
     <nav class="navcontainer">
         <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
 
-
+<!--W3Schools: CSS dropdown: https://www.w3schools.com/css/css_dropdowns.asp--> 
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
 
@@ -56,50 +57,63 @@
 </header>
 
 <main>
+
+<!--Billede er fra Radars egen hjemmeside-->
     <section class="section1">
         <img src="images/billede1.png" alt="billede" class="billede1">
         <div class="tekst1">
             <h1>ISBJÖRG releasekoncert</h1>
+<!--Musik-knap og styling deraf er fra spotify-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1esgylY75bAdWCW8ItVOup?utm_source=generator&theme=0" width="100%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
+<!--Billede er fra Radars egen hjemmeside-->
     <section class="section2">
         <img src="images/billede2.png" alt="billede" class="billede2">
         <div class="tekst2">
             <h1>Døtre</h1>
+<!--Musik-knap og styling deraf er fra spotify-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4N2TW7govlzaF1DGmtD34T?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
+<!--Billede er fra Radars egen hjemmeside-->
     <section class="section3">
         <img src="images/billede3.png" alt="billede" class="billede3">
         <div class="tekst3">
             <h1>Resavoir</h1>
+<!--Musik-knap og styling deraf er fra spotify-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6Mmpz9igswKB5ghtJNw0eW?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
+<!--Billede er fra Radars egen hjemmeside-->
     <section class="section4">
         <img src="images/billede4.png" alt="billede" class="billede4">
         <div class="tekst4">
             <h1>Marie Fjeldsted</h1>
+<!--Musik-knap og styling deraf er fra spotify-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1gQxSHywhHHg6ldxPTrM91?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
+<!--Billede er fra Radars egen hjemmeside-->
     <section class="section5">
         <img src="images/billede5.png" alt="billede" class="billede5">
         <div class="tekst5">
             <h1>Rin</h1>
+<!--Musik-knap og styling deraf er fra spotify-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2rvHqBh1VdreAE2mxIlv7Z?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
 
+<!--Billede er fra Radars egen hjemmeside-->
     <section class="section6">
         <img src="images/billede6.png" alt="billede" class="billede6">
         <div class="tekst6">
             <h1>OTOOTO</h1>
+<!--Musik-knap og styling deraf er fra spotify-->
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7CjCFlxm6wAY1YaWLHfigE?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
@@ -107,6 +121,7 @@
 
 <footer>
     <div class="some">
+<!--Sociale medier med link til Radars kanaler-->
         <div class="spotify">
             <a href="https://open.spotify.com/user/radarlive" target="_blank"><img src="images/spotify.png" alt="spotify"></a>
         </div>
