--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -17,10 +17,11 @@
 </head>
 <body>
 <header>
+<!--Header med menubar og logo-->
     <nav class="navcontainer">
         <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
 
-
+<!--W3Schools: CSS dropdown: https://www.w3schools.com/css/css_dropdowns.asp--> 
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
 
@@ -52,12 +53,11 @@
             </div>
         </div>
     </nav>
-    
 </header>
 
 <main>
+    <!--Kontaktinformationer på radar-->
     <h1>Kontaktinformation</h1>
-
     <div class="box">
         <div class="info">
             <h2>BOOKING: booking.(@).radarlive.dk</h2>
@@ -66,6 +66,7 @@
             <h2>ADRESSE: Karen Wegners Gade 6</h2>
         </div>
 
+<!--Direkte link til googlemaps, hvor man kan finde vejvisning, ved at trykke på billede-->
     <a href="https://maps.app.goo.gl/boefyVkxzxeojxbQ7" target="_blank"> 
             <div class="billeder_container">
             <img src="images/kort.png" alt="kort" class="kort">
@@ -78,6 +79,7 @@
 
 <footer>
     <div class="some">
+<!--Sociale medier med link til Radars kanaler-->
         <div class="spotify">
             <a href="https://open.spotify.com/user/radarlive" target="_blank"><img src="images/spotify.png" alt="spotify"></a>
         </div>
