--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+<!--Header med menubar og logo-->
         <nav class="navcontainer">
             <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
 
@@ -60,6 +61,7 @@
 
 <footer>
 <div class="some">
+<!--Sociale medier med link til Radars kanaler-->
     <div class="spotify">
         <a href="https://open.spotify.com/user/radarlive" target="_blank"><img src="images/spotify.png" alt="spotify"></a>
     </div>
