kommentare på alt

--- a/arrangementer.html
+++ b/arrangementer.html
@@ -57,7 +57,7 @@
 
 
     <main>
-<!--Billede og beskrivelse af artist er fra radars egen hjemmeside. Teksten fra radars hjemmeside er blevet forkortet for at gøre det letlæseligt-->
+<!--Billede og beskrivelse af artist er fra radars egen hjemmeside. Teksten fra radars hjemmeside er blevet forkortet for at gøre det letlæseligt: Dette er gjort ved hjælp fra  - ChatGPT: "Opsummer dette tekststykke"(https://chatgpt.com/share/675b2beb-fef8-8009-8b2c-726918213c88)-->
     <div class="koncert1">
         <img src="images/allen.png" alt="allen" class="allen">
 
