--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input type="checkbox" id="menu-bar">
             <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
     
+            <!--Herunder en smule styling, da dette ikke ville fungere på css...-->
             <div class="container" style="float: right;">
                 <div class="dropdown" style="float:right;">
                     <a href="kontaktinformation.html"><button class="dropbtn">Kontaktinformation</button></a>
