--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anmeldelser | Radar</title>
+    <title>Musikken | Radar</title>
 
     <!--Logo i fane-->
     <link rel="icon" type="image/x-icon" href="/images/logo_færdig.png">
@@ -34,7 +34,7 @@
                 <button class="dropbtn">Anmeldelser</button>
                 <div class="dropdown-content">
                 <a href="anmeldelser.html">Hør musikken</a>
-                <a href="#">Historier og oplevelser fra kunstere</a>
+                <a href="kunstnere.html">Historier og oplevelser fra kunstere</a>
                 </div>
             </div>
             <div class="dropdown" style="float:right;">
