--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -33,7 +33,7 @@
                 <button class="dropbtn">Anmeldelser</button>
                 <div class="dropdown-content">
                     <a href="anmeldelser.html">Hør musikken</a>
-                    <a href="#">Historier og oplevelser fra kunstere</a>
+                    <a href="kunstnere.html">Historier og oplevelser fra kunstere</a>
                 </div>
             </div>
             <div class="dropdown" style="float:right;">
@@ -96,6 +96,6 @@
             <a href="https://www.youtube.com/user/radarliverec" target="_blank"><img src="images/youtube.png" alt="youtube"></a>
         </div>
     </div>
-    </footer>
+</footer>
 </body>
 </html>
