--- a/historie.html
+++ b/historie.html
@@ -33,7 +33,7 @@
                     <button class="dropbtn">Anmeldelser</button>
                     <div class="dropdown-content">
                         <a href="anmeldelser.html">Hør musikken</a>
-                        <a href="kunstnere.html">Historier og oplevelser fra kunstere</a>
+                        <a href="kunstnere.html">Historier og oplevelser fra Radar</a>
                     </div>
                 </div>
                 <div class="dropdown" style="float:right;">
