--- a/kunstnere.html
+++ b/kunstnere.html
@@ -192,15 +192,13 @@ afsted me dine bedste venner. Citatet på gerne indeholde ordene "hvorfor er mus
                     <img src="images/gaest3.png" alt="gaest3" class="gaest3">
 
                     <div class="tekst3">
-<!--ChatGPT: "Kan du et citat som en sanger der har spillet koncert på spillestedet radar. Du skal beskrive din oplevelse og meget gerne hvordan 
-du synes atmosfæren og stemningen var på stedet både før under og efter koncerten." 
-https://chatgpt.com/share/675b4bb4-b368-8009-8597-bf0dafba462c -->
-                        <p>"Det var en helt fantastisk oplevelse at spille på Radar i aften for en fuldstændig pakket sal. Energien fra publikum 
-                            var magisk, og vi kunne virkelig mærke, hvordan vores musik ramte jer lige i hjertet. Aarhus har altid en særlig 
-                            plads hos os, og det er steder som Radar og det her publikum, der gør det til noget helt specielt at være musikere. 
-                            Vi er enormt taknemmelige for den varme modtagelse og den vilde energi, I gav os i aften. Vi kan love jer, at vi 
-                            helt sikkert kommer tilbage igen – og vi glæder os allerede!" <br>
-                        - Blæst</p>
+<!--ChatGPT: "Lav et sjovt citat, med en der har været på radar mange gange. Dette citat må gerne indeholde den danske ungdomskultur. 
+I citatet må personen gerne fortælle at han/hun fik mulighed for at få mikrofonen og synge med - og at dette er personens værste mareridt.
+https://chatgpt.com/share/675bf746-dfc4-8009-a215-540b08a2d3fa -->
+                        <p>"Jeg har været på Radar så mange gange, at jeg føler, det er mit andet hjem. Men den ene gang,
+                             de rakte mig mikrofonen til en fællessang, blev jeg mindet om, at mit værste mareridt er 
+                             at høre min egen stemme i et lydanlæg. Det er ikke ligefrem dét, dansk ungdomskultur skal huske mig for!" <br>
+                        - Den meget højlydte sanger</p>
         
                         <div class="hjerte3">
                             <i class="fa-solid fa-heart"></i>
@@ -215,21 +213,20 @@ https://chatgpt.com/share/675b4bb4-b368-8009-8597-bf0dafba462c -->
         <div class="gaest_4">
             <div class="billede_container">
                 <div class="tekst_4">
-<!--ChatGPT: "Kan du lave et citat, fra en ny upcoming kunstner som har spillet på spillestedet Radar for første gang. 
-Beskriv gerne hvad kunstneren følte men de spillede der, og hvordan de følte sig modtaget af publikum."
-https://chatgpt.com/share/675b4ce2-9f64-8009-a746-fb1323bd2801-->
-                    <p>"At spille på Radar føltes som en drøm, der blev til virkelighed. Scenen har en helt særlig energi, og 
-                        fra det øjeblik jeg trådte ind, kunne jeg mærke, at det her var et sted, der virkelig værner om musikken. 
-                        Publikum var utroligt imødekommende – deres engagement og nærvær løftede hele oplevelsen til et niveau, jeg 
-                        aldrig vil glemme. Det var som at være i ét med rummet, lydene og menneskene. Jeg forlod scenen med en 
-                        følelse af taknemmelighed og inspiration til at fortsætte denne rejse." <br>
-                    - AKSGLÆDE </p>
+<!--ChatGPT: "lav et citat fra to piger som sammen har besluttet at besøge radar for første gang. i citat må det gerne nævnes at 
+de havde hørt om stedet fra nogle venner og at vennerne havde omtalt stedet som "Et sted man skal besøge i aarhus" 
+https://chatgpt.com/share/675bf812-f390-8009-8251-23f18b0bcad9-->
+                    <p>"Vi har aldrig været på Radar før, men vi har hørt rigtig meget godt om det fra nogle venner. 
+                        De sagde, at det er 'et sted, man skal besøge i Aarhus,' fordi der altid er en god stemning 
+                        og spændende musik. Så vi tænkte, at det var på tide, vi selv oplevede det!" <br>
+                    - Det nye publikum </p>
 
                     <div class="hjerte4">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
                     </div>
                 </div>
                 <img src="images/gaest4.png" alt="gaest4" class="gaest4">
