--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -13,6 +13,14 @@
 
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    
+    <!--SEO metatags-->
+    <meta name="title" content="Musikken | Radar">
+    <meta name="description" content="Her er en side, hvor der er mulighed for at høre musikken fra nogle af de artister der spiller på radar. Dette er med til at give inspiration samt give en fornemmelse af hvad der sker på radar">
+    <meta name="keywords" content="musik, radar, stemning, kultur, musikken,">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
 
 </head>
 <body>
