--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -14,6 +14,15 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
+    <!--SEO metatags-->
+    <meta name="title" content="Kontaktinformationer | Radar">
+    <meta name="description" content="Dette er radar kontaktinformations side. Her kan man finde kontaktoplysninger på stedet og deres kanaler">
+    <meta name="keywords" content="kontaktinformation, adresse, e-mail, booking, telefonnummer, kort">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
+
 </head>
 <body>
 <header>
