--- a/arrangementer.html
+++ b/arrangementer.html
@@ -14,6 +14,14 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
+    <!--SEO metatags-->
+    <meta name="title" content="Arrangementer | Radar">
+    <meta name="description" content="På denne side finder man et overblik over de kommende arrangementer. Her kan man se de kommende koncerter, og læse en kort beskrivende tekst omkring artisten">
+    <meta name="keywords" content="artist, dato, arrangementer, musiker, band, kultur, radar, koncert">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    
 </head>
 <body>
     <header>
