--- a/historie.html
+++ b/historie.html
@@ -14,6 +14,14 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
+    <!--SEO metatags-->
+    <meta name="title" content="Historien | Radar">
+    <meta name="description" content="Dette er siden med radars historie. Herunder finder man noget om hvilke genre der spilles og derudover giver der også lidt baggrundsviden som er nyttigt at kende til.">
+    <meta name="keywords" content="Radars historie, radar, historie, hvad skal man se i aarhus, kultur, musik, upcoming, spirende, publikum, kunstnere, musikere">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
 </head>
 <body>
     <header>
