--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
+    <!--SEO metatags-->
+    <meta name="title" content="Forside | Radar">
+    <meta name="description" content="Dette er hjemmesidens forside/landingpage. Her kan man se logoet og meupunkterne.">
+    <meta name="keywords" content="kontaktinformation, anmeldelser, om radar, arrangementer, sociale medier, hør musikken, oplevelser, historier, åbningstider, frivilligt arbejde, baren, priser">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
 </head>
 <body>
     <header>
