--- a/kunstnere.html
+++ b/kunstnere.html
@@ -14,6 +14,14 @@
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
+    <!--SEO metatags-->
+    <meta name="title" content="Oplevelser | Radar">
+    <meta name="description" content="Dette er siden med udtalelser fra de kunstnere og gæster der har besøgt radar. herunder kan man også selv efterlade en kommentar.">
+    <meta name="keywords" content="kunstnernes oplevelser, Radar, publikums oplevelser, fest, atmosfære, mennesker, kunstner, publikum, stemning">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
 </head>
 <body>
     <header>
