--- a/historie.html
+++ b/historie.html
@@ -31,8 +31,12 @@
             
 <!--W3Schools: CSS dropdown: https://www.w3schools.com/css/css_dropdowns.asp--> 
             <input type="checkbox" id="menu-bar">
+
+<!--Burgermenu label, som kommer frem i stedet for menubar ved mindre skærme-->
             <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
     
+
+<!--Containere som placerer menubaren i højreside af skærmen (style hertil fra w3schools: CSS Dropdown: https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_right)-->
             <div class="container" style="float: right;">
                 <div class="dropdown" style="float:right;">
                     <a href="kontaktinformation.html"><button class="dropbtn">Kontaktinformation</button></a>
